added get all ingredients api endpoint
