# swagger/responses.yml
@@ -108,6 +108,12 @@ components:
         application/json:
           schema:
             $ref: "#/components/schemas/IRecipeResponse"
+    IngredientsDTO:
+      description: Response with ingredients
+      content:
+        application/json:
+          schema:
+            $ref: "#/components/schemas/IIngredientResponse"
     QueueId:
       description: the id of the newly created queue entry.
       content:
